--- a/casino_testapp/Views/Shared/_Layout.cshtml
+++ b/casino_testapp/Views/Shared/_Layout.cshtml
@@ -7,8 +7,6 @@
 </style>
 <html lang="en">
 
-
-
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
@@ -51,186 +49,38 @@
 <body>
 
     <!-- ======= Header ======= -->
-    <header id="header" class="header fixed-top d-flex align-items-center">
+    <header id="header" class="header fixed-top d-flex align-items-center" style="background-color: #29303A;">
 
         <div class="d-flex align-items-center justify-content-between">
             <a href="index.html" class="logo d-flex align-items-center">
                 <img src="~/Content/assets/img/logo.png" alt="">
-                <span class="d-none d-lg-block">Mj Casino</span>
+                <span class="d-none d-lg-block" style="color:beige;">Mj Casino</span>
             </a>
-            <i class="bi bi-list toggle-sidebar-btn"></i>
+            <i class="bi bi-list toggle-sidebar-btn" id="toggle" style="color: beige;"> <span></span></i>
         </div><!-- End Logo -->
         <div class="search-bar" style="display: hidden;">
 
         </div>
 
-        <div class="search-bar">
-            <form class="search-form d-flex align-items-center" style="justify-content: flex-end;" method="POST"
-                action="#">
-                <input type="text" name="query" placeholder="0.00" title="Enter search keyword" style="width: 40% ;"
-                    disabled>
-                <button type="submit" title="cash"><i class="bi bi-cash-coin"></i></button>
-            </form>
-        </div><!-- End Search Bar -->
+        <!-- End Search Bar -->
 
-        <nav class="header-nav ms-auto">
-            <div class="d-flex">
-            </div>
-            <ul class="d-flex align-items-center">
-                <li class="nav-item d-block d-lg-none">
-                    <a class="nav-link nav-icon search-bar-toggle " href="#">
-                        <input type="text" name="query" placeholder="0.00" title="Enter search keyword"
-                            style="width: 40% ;" disabled>
-                        <i class="bi bi-cash-coin"></i>
-                    </a>
-                </li><!-- End Search Icon-->
-
-                <li class="nav-item dropdown">
-
-                    <a class="nav-link nav-icon" href="#" data-bs-toggle="dropdown">
-                        <i class="bi bi-bell"></i>
-                        <span class="badge bg-primary badge-number">4</span>
-                    </a><!-- End Notification Icon -->
-
-                    <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow notifications">
-                        <li class="dropdown-header">
-                            You have 4 new notifications
-                            <a href="#"><span class="badge rounded-pill bg-primary p-2 ms-2">View all</span></a>
-                        </li>
-                        <li>
-                            <hr class="dropdown-divider">
-                        </li>
-
-                        <li class="notification-item">
-                            <i class="bi bi-exclamation-circle text-warning"></i>
-                            <div>
-                                <h4>Lorem Ipsum</h4>
-                                <p>Quae dolorem earum veritatis oditseno</p>
-                                <p>30 min. ago</p>
-                            </div>
-                        </li>
-
-                        <li>
-                            <hr class="dropdown-divider">
-                        </li>
-
-                        <li class="notification-item">
-                            <i class="bi bi-x-circle text-danger"></i>
-                            <div>
-                                <h4>Atque rerum nesciunt</h4>
-                                <p>Quae dolorem earum veritatis oditseno</p>
-                                <p>1 hr. ago</p>
-                            </div>
-                        </li>
-
-                        <li>
-                            <hr class="dropdown-divider">
-                        </li>
-
-                        <li class="notification-item">
-                            <i class="bi bi-check-circle text-success"></i>
-                            <div>
-                                <h4>Sit rerum fuga</h4>
-                                <p>Quae dolorem earum veritatis oditseno</p>
-                                <p>2 hrs. ago</p>
-                            </div>
-                        </li>
-
-                        <li>
-                            <hr class="dropdown-divider">
-                        </li>
-
-                        <li class="notification-item">
-                            <i class="bi bi-info-circle text-primary"></i>
-                            <div>
-                                <h4>Dicta reprehenderit</h4>
-                                <p>Quae dolorem earum veritatis oditseno</p>
-                                <p>4 hrs. ago</p>
-                            </div>
-                        </li>
-
-                        <li>
-                            <hr class="dropdown-divider">
-                        </li>
-                        <li class="dropdown-footer">
-                            <a href="#">Show all notifications</a>
-                        </li>
-
-                    </ul><!-- End Notification Dropdown Items -->
-
-                </li><!-- End Notification Nav -->
-
-                <li class="nav-item dropdown">
-
-                    <a class="nav-link nav-icon" href="#" data-bs-toggle="dropdown">
-                        <i class="bi bi-chat-left-text"></i>
-                        <span class="badge bg-success badge-number">3</span>
-                    </a><!-- End Messages Icon -->
-
-                    <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow messages">
-                        <li class="dropdown-header">
-                            You have 3 new messages
-                            <a href="#"><span class="badge rounded-pill bg-primary p-2 ms-2">View all</span></a>
-                        </li>
-                        <li>
-                            <hr class="dropdown-divider">
-                        </li>
-
-                        <li class="message-item">
-                            <a href="#">
-                                <img src="~/Content/assets/img/messages-1.jpg" alt="" class="rounded-circle">
-                                <div>
-                                    <h4>Maria Hudson</h4>
-                                    <p>Velit asperiores et ducimus soluta repudiandae labore officia est ut...</p>
-                                    <p>4 hrs. ago</p>
-                                </div>
-                            </a>
-                        </li>
-                        <li>
-                            <hr class="dropdown-divider">
-                        </li>
-
-                        <li class="message-item">
-                            <a href="#">
-                                <img src="~/Content/assets/img/messages-2.jpg" alt="" class="rounded-circle">
-                                <div>
-                                    <h4>Anna Nelson</h4>
-                                    <p>Velit asperiores et ducimus soluta repudiandae labore officia est ut...</p>
-                                    <p>6 hrs. ago</p>
-                                </div>
-                            </a>
-                        </li>
-                        <li>
-                            <hr class="dropdown-divider">
-                        </li>
-
-                        <li class="message-item">
-                            <a href="#">
-                                <img src="~/Content/assets/img/messages-3.jpg" alt="" class="rounded-circle">
-                                <div>
-                                    <h4>David Muldon</h4>
-                                    <p>Velit asperiores et ducimus soluta repudiandae labore officia est ut...</p>
-                                    <p>8 hrs. ago</p>
-                                </div>
-                            </a>
-                        </li>
-                        <li>
-                            <hr class="dropdown-divider">
-                        </li>
-
-                        <li class="dropdown-footer">
-                            <a href="#">Show all messages</a>
-                        </li>
-
-                    </ul><!-- End Messages Dropdown Items -->
-
-                </li><!-- End Messages Nav -->
-
+        <nav id="header"  class="header-nav ms-auto">
+            <ul class=" d-flex align-items-center">
+                <!-- End Search Icon-->
                 <li class="nav-item dropdown pe-3">
-
+                    <div class="nav-profile">
+                        <form class="search-form d-flex align-items-center" style="justify-content: flex-end;"
+                              method="POST" action="#">
+                            <input type="text" name="query" placeholder="Php 0.00" title="Enter search keyword"
+                                   style="width:fit-content; background:beige;" disabled>
+                            <button type="submit" title="cash"><i class="bi bi-cash-coin"></i></button>
+                        </form>
+                    </div>
+                </li>
+                <li class="nav-item dropdown pe-3">
                     <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
                         <img src="~/Content/assets/img/profile-img.jpg" alt="Profile" class="rounded-circle">
-                        <span class="d-none d-md-block dropdown-toggle ps-2">K. Anderson</span>
+
                     </a><!-- End Profile Iamge Icon -->
 
                     <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
@@ -283,11 +133,13 @@
                 </li><!-- End Profile Nav -->
 
             </ul>
-        </nav><!-- End Icons Navigation -->
+        </nav>
+
+        <!-- End Icons Navigation -->
 
     </header><!-- End Header -->
     <!-- ======= Sidebar ======= -->
-    <aside id="sidebar" class="sidebar">
+    <aside id="sidebar" class="sidebar" style="background-color: #29303A;">
 
         <ul class="sidebar-nav" id="sidebar-nav">
 
@@ -327,11 +179,14 @@
 
     </aside><!-- End Sidebar-->
 
-    <main id="main" class="main " >
+    <main id="main" class="main bg-cover bg-no-repeat"
+        >
+
+    @*style="background-image: url(' ~/Content/assets/img/webbackground.jpg')"*@
         @*<section class="section">*@
-            <div class="content-wrapper" ng-app="MJCasinoapp">
-                @RenderBody()
-            </div>
+        <div class="content-wrapper" ng-app="MJCasinoapp">
+            @RenderBody()
+        </div>
         @*</section>*@
     </main><!-- End #main -->
     <!-- ======= Footer ======= -->
@@ -349,7 +204,7 @@
     <script src="~/Scripts/angular.min.js"></script>
     <script src="~/Scripts/AngularJs/myApp.js"></script>
     <script src="~/Scripts/jquery-1.10.2.min.js"></script>
-   
+
 
 
     <!-- Vendor JS Files -->
@@ -365,9 +220,7 @@
     <!-- Template Main JS File -->
     <script src="~/Content/assets/js/main.js"></script>
 
-
-  
-    @*@RenderSection("scripts", required: false)*@
+    @RenderSection("scripts", required: false)
 
 </body>
 
